# plexmusicbridge

./: .gitignore  Dockerfile  LICENSE  README.md
plexmusicbridge/: setup.cfg
plexmusicbridge/src/plexmusicbridge/: __init__.py  __main__.py  config.py  const.py  httpserver.py  playbackmanager.py  playqueue.py  plexgdm.py  plexserver.py  subscriptionmanager.py
plexmusicbridge/src/plexmusicbridge/player/: 851n.py  __init__.py  cxn.py  template.py  vlc.py
