[metadata]
name = PlexMusicBridge
version = 0.0.1
author = Niclas Kühnapfel
description = PlexMusicBridge bridges the gap between Plex and UPnP HiFi players.
url = https://github.com/niclasku/plexmusicbridge
project_urls =
    Bug Tracker = https://github.com/niclasku/plexmusicbridge/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.25.1
    xmltodict>=0.12.0

[options.entry_points]
console_scripts =
    plexmusicbridge = plexmusicbridge:main

[options.packages.find]
where = src